# weathrs-gui

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
static/: app.js  index.html  style.css
