[package]
name = "weathrs-gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
urlencoding = "2.1"

# For making HTTP requests (rustls-tls for native HTTPS, fetch API for wasm)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Native HTTP server
tokio = { version = "1", features = ["full"] }
axum = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Storage",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
]

[profile.release]
opt-level = "s"
lto = true
